<resources>
    <string name="app_name_chatx">ChatX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_user_click_here_to_register">New User? Click here to register</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo">logo</string>
    <string name="signup">Signup</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="name">Name</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="how_s_you_feeling_today">How\'s You feeling Today?</string>
    <string name="create_post_floating_action_button">Create Post Floating Action Button</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="floating_action_button_chatrooms">floating action button chatrooms</string>
    <string name="enter_message">Enter Message</string>
    <string name="username">Username</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
</resources>